# kki-test-fe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tailwind.config.js
app/: api.py  context_processor.py  index.py  settings.py  urls.py
app/buku/: forms.py  urls.py  views.py
app/kategori/: forms.py  urls.py  views.py
static/CACHE/css/: output.28227da83a72.css
static/scripts/: message.js  pagination.js
static/src/: output.css
templates/: base.html  index.html
templates/components/: message.html  sidebar.html
templates/pages/: buku.html  buku_form.html  dialog.html  kategori.html  kategori_form.html
