[tool.poetry]
name = "buku crud frontend"
version = "0.1.0"
description = ""
authors = ["Adrian Maulani <maulani.ad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-decouple = "^3.8"
django = "^5.1.3"
django-compressor = "^4.5.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
